<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/nav_my_activities"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_my_activities" />

    <item
        android:id="@+id/nav_participations"
        android:icon="@drawable/ic_check_circle"
        android:title="@string/nav_joined" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />

</menu>
